--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html>
 <head>
     <script src="./dist/tooloud.min.js"></script>
+    <style>
+        canvas {
+            border: 1px solid black;
+        }
+        button {
+            width: 100px;
+            height: 40px;
+        }
+    </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div><button id="run">Run</button></div>
+    <div>
+        <button id="run">Run</button>
+        <button id="clear">Clear</button>
+    </div>
     <script src="./demo.js"></script>
 </body>
 </html>
