--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
         <button id="run">Run</button>
         <button id="clear">Clear</button>
     </div>
-    <script src="./dist/tooloud.min.js"></script>
+    <script src="../dist/tooloud.min.js"></script>
     <script src="./demo.js"></script>
 </body>
 </html>
